syntax/tests/parsing/errors/typeDef/emptyInlineRecord.res
type node<'a> =
  | Nil
  | Node({})
